--- a/EFD-Admin/Parcel/DetailParcelView/DetailParcelViewController.xib
+++ b/EFD-Admin/Parcel/DetailParcelView/DetailParcelViewController.xib
@@ -1,22 +1,126 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="ipad11_0rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailParcelViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailParcelViewController" customModule="EFD_Admin" customModuleProvider="target">
             <connections>
+                <outlet property="bigDescription" destination="OIL-9k-BQH" id="wXK-dw-IdZ"/>
+                <outlet property="parcelName" destination="ntL-1A-Fea" id="FMu-A5-ZEE"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="834" height="1210"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="olx-W4-sdc">
+                    <rect key="frame" x="0.0" y="24" width="834" height="1166"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QjR-Tr-PEe">
+                            <rect key="frame" x="0.0" y="0.0" width="834" height="220"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ntL-1A-Fea">
+                                    <rect key="frame" x="226" y="46.5" width="364" height="53"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zkk-Hf-fq8">
+                                    <rect key="frame" x="134" y="149.5" width="166" height="39.5"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="166" id="Sdy-Jn-dLq"/>
+                                    </constraints>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="filled" title="Edit "/>
+                                    <connections>
+                                        <action selector="patchParcel:" destination="-1" eventType="touchUpInside" id="1UT-7N-Zcw"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NPD-FI-sye">
+                                    <rect key="frame" x="340" y="150" width="166" height="38.5"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="filled" title="Delete"/>
+                                    <connections>
+                                        <action selector="deleteParcel:" destination="-1" eventType="touchUpInside" id="V5J-Dr-MmT"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2iF-YH-Wlg">
+                                    <rect key="frame" x="550" y="150" width="166" height="38.5"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="filled" title="Create"/>
+                                    <connections>
+                                        <action selector="createParcel:" destination="-1" eventType="touchUpInside" id="55o-aC-OpU"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="zkk-Hf-fq8" firstAttribute="leading" secondItem="ntL-1A-Fea" secondAttribute="leading" constant="-92" id="3g8-6Y-cNJ"/>
+                                <constraint firstItem="2iF-YH-Wlg" firstAttribute="baseline" secondItem="NPD-FI-sye" secondAttribute="baseline" id="4Yq-Db-qRJ"/>
+                                <constraint firstItem="2iF-YH-Wlg" firstAttribute="leading" secondItem="NPD-FI-sye" secondAttribute="trailing" constant="44" id="4mp-5c-BQN"/>
+                                <constraint firstItem="NPD-FI-sye" firstAttribute="centerX" secondItem="ntL-1A-Fea" secondAttribute="centerX" constant="15" id="8m0-H8-gun"/>
+                                <constraint firstItem="2iF-YH-Wlg" firstAttribute="width" secondItem="NPD-FI-sye" secondAttribute="width" id="9AL-gP-11s"/>
+                                <constraint firstItem="NPD-FI-sye" firstAttribute="leading" secondItem="zkk-Hf-fq8" secondAttribute="trailing" constant="40" id="DBf-6U-S1g"/>
+                                <constraint firstItem="NPD-FI-sye" firstAttribute="centerY" secondItem="zkk-Hf-fq8" secondAttribute="centerY" id="Jg8-xa-Z6g"/>
+                                <constraint firstItem="ntL-1A-Fea" firstAttribute="centerY" secondItem="QjR-Tr-PEe" secondAttribute="centerY" constant="-37" id="PNQ-wg-iYg"/>
+                                <constraint firstItem="NPD-FI-sye" firstAttribute="width" secondItem="zkk-Hf-fq8" secondAttribute="width" id="XPT-Gr-sF5"/>
+                                <constraint firstAttribute="bottom" secondItem="zkk-Hf-fq8" secondAttribute="bottom" constant="31" id="ZsX-nv-NX4"/>
+                                <constraint firstItem="ntL-1A-Fea" firstAttribute="leading" secondItem="QjR-Tr-PEe" secondAttribute="leading" constant="226" id="hKu-hC-in0"/>
+                                <constraint firstAttribute="bottom" secondItem="NPD-FI-sye" secondAttribute="bottom" constant="31.5" id="oAk-jQ-1Jf"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jm2-bc-bfx">
+                            <rect key="frame" x="0.0" y="248" width="834" height="918"/>
+                            <subviews>
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="OIL-9k-BQH">
+                                    <rect key="frame" x="38" y="47" width="761" height="809"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                    <color key="textColor" systemColor="labelColor"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                </textView>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="OIL-9k-BQH" firstAttribute="top" secondItem="Jm2-bc-bfx" secondAttribute="top" constant="47" id="NmF-m3-ahF"/>
+                                <constraint firstItem="OIL-9k-BQH" firstAttribute="leading" secondItem="Jm2-bc-bfx" secondAttribute="leading" constant="38" id="aeC-b6-I3C"/>
+                                <constraint firstAttribute="bottom" secondItem="OIL-9k-BQH" secondAttribute="bottom" constant="62" id="nWj-sd-naK"/>
+                                <constraint firstItem="OIL-9k-BQH" firstAttribute="width" secondItem="Jm2-bc-bfx" secondAttribute="width" multiplier="0.91247" id="vp6-xU-FaQ"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="Jm2-bc-bfx" secondAttribute="trailing" id="Rbi-Mz-9wb"/>
+                        <constraint firstItem="Jm2-bc-bfx" firstAttribute="leading" secondItem="olx-W4-sdc" secondAttribute="leading" id="W2O-0a-8ki"/>
+                        <constraint firstAttribute="trailing" secondItem="QjR-Tr-PEe" secondAttribute="trailing" id="ig8-8w-83Q"/>
+                        <constraint firstItem="Jm2-bc-bfx" firstAttribute="top" secondItem="olx-W4-sdc" secondAttribute="top" constant="248" id="rn9-kX-YYY"/>
+                        <constraint firstItem="QjR-Tr-PEe" firstAttribute="leading" secondItem="olx-W4-sdc" secondAttribute="leading" id="rnQ-HR-DgY"/>
+                    </constraints>
+                </stackView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="olx-W4-sdc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="6Kt-zN-XhB"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="olx-W4-sdc" secondAttribute="trailing" id="6oC-VJ-uYF"/>
+                <constraint firstItem="olx-W4-sdc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="NfP-Hc-uLJ"/>
+                <constraint firstItem="olx-W4-sdc" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="VXv-YU-h7P"/>
+            </constraints>
+            <point key="canvasLocation" x="125.89928057553958" y="20.826446280991735"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
